# fastapi_orm_example

./: .gitignore  Makefile  pyproject.toml  setup.cfg
app/: config.py  dependencies.py  event_handlers.py  main.py  manage.py  middleware.py  schemas.py
fastapi_orm_example/: app.py  database.py  models.py  schemas.py
