[tool.poetry]
authors = ["Michael T <bravmech@gmail.com>"]
description = ""
name = "fastapi_orm_example"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = "^0.17"
fastapi = "^0.79"
python = "^3.10"
sqlalchemy = "^1.4"
uvicorn = "^0.18"

[tool.poetry.dev-dependencies]
black = "*"
debugpy = "*"
flake8 = "*"
greenlet = "^1"
httpie = "*"
ipdb = "*"
ipython = "*"
isort = "*"
mypy = "*"
pydevd-pycharm = "~222.4459.20"
sqlalchemy-stubs = "*"
sqltap = "^0.3"

[tool.black]
skip-string-normalization = true

[tool.isort]
combine_as_imports = true
line_length = 88
profile = "black"
skip_gitignore = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
